Add localization support for additional languages and update UI strings for PDF upload feature

--- a/frontend/lib/l10n/app_am.arb
+++ b/frontend/lib/l10n/app_am.arb
@@ -146,5 +146,6 @@
   "allTypes": "ሁሉም ዓይነቶች",
   "openType": "ክፍት",
   "multipleChoiceType": "ምርጫ",
-  "allFiles": "ሁሉም ፋይሎች"
+  "allFiles": "ሁሉም ፋይሎች",
+  "uploadToUnlock": "የጥያቄ ማመንጨትን ለመክፈት PDF ይስቀሉ"
 }
