--- a/frontend/lib/l10n/app_it.arb
+++ b/frontend/lib/l10n/app_it.arb
@@ -147,5 +147,23 @@
   "openType": "Aperta",
   "multipleChoiceType": "Scelta Multipla",
   "allFiles": "Tutti i File",
-  "uploadToUnlock": "Carica un PDF per sbloccare la generazione di quiz"
+  "uploadToUnlock": "Carica un PDF per sbloccare la generazione di quiz",
+  "quizConfigTitle": "Configura il Quiz",
+  "selectAiModel": "Seleziona Modello AI",
+  "questionType": "Tipo di Domanda",
+  "optionsCount": "Numero Opzioni",
+  "initializing": "Inizializzazione...",
+  "analyzingTopics": "Analisi Argomenti...",
+  "stopGeneration": "Interrompi Generazione",
+  "stopping": "Arresto in corso...",
+  "aborting": "Annullamento...",
+  "processing": "Elaborazione...",
+  "completed": "Completato!",
+  "generationStoppedSafely": "Generazione interrotta correttamente.",
+  "stopGeneration": "Interrompi Generazione",
+  "stopping": "Arresto in corso...",
+  "aborting": "Annullamento...",
+  "processing": "Elaborazione...",
+  "completed": "Completato!",
+  "generationStoppedSafely": "Generazione interrotta correttamente."
 }
